--- a/package.json
+++ b/package.json
@@ -25,9 +25,10 @@
 		"eslint-plugin-svelte3": "^3.2.1",
 		"prettier": "^2.5.1",
 		"prettier-plugin-svelte": "^2.5.0",
-		"svelte": "^3.44.0",
+		"svelte": "^3.47.0",
 		"svelte-check": "^2.2.6",
 		"svelte-preprocess": "^4.10.1",
+		"svelte2tsx": "^0.5.8",
 		"tslib": "^2.3.1",
 		"typescript": "~4.6.2"
 	},
