--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "chakra-ui-svelte",
-	"version": "0.0.1",
+	"version": "0.0.1-next.1",
 	"scripts": {
 		"dev": "svelte-kit dev",
 		"build": "svelte-kit build",
