--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
 	"name": "chakra-ui-svelte",
-	"version": "0.0.1-next.1",
+	"version": "0.0.1-next.2",
+	"type": "module",
+	"main": "./index.js",
 	"scripts": {
 		"dev": "svelte-kit dev",
 		"build": "svelte-kit build",
@@ -13,8 +15,15 @@
 		"lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
 		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
 	},
-	"devDependencies": {
+	"dependencies": {
 		"@babel/core": "^7.17.9",
+		"@chakra-ui/styled-system": "^1.19.0",
+		"@emotion/css": "^11.9.0"
+	},
+	"peerDependencies": {
+		"svelte": "^3.47.0"
+	},
+	"devDependencies": {
 		"@playwright/test": "^1.20.0",
 		"@sveltejs/adapter-auto": "^1.0.0-next.34",
 		"@sveltejs/kit": "next",
@@ -31,10 +40,5 @@
 		"svelte2tsx": "^0.5.8",
 		"tslib": "^2.3.1",
 		"typescript": "~4.6.2"
-	},
-	"type": "module",
-	"dependencies": {
-		"@chakra-ui/styled-system": "^1.19.0",
-		"@emotion/css": "^11.9.0"
 	}
 }
