--- a/package.json
+++ b/package.json
@@ -40,5 +40,8 @@
 		"svelte2tsx": "^0.5.8",
 		"tslib": "^2.3.1",
 		"typescript": "~4.6.2"
+	},
+	"optionalDependencies": {
+		"svelte-icons": "^2.1.0"
 	}
 }
