--- a/package.json
+++ b/package.json
@@ -27,17 +27,22 @@
 		"@playwright/test": "^1.20.0",
 		"@sveltejs/adapter-auto": "^1.0.0-next.34",
 		"@sveltejs/kit": "next",
+		"@testing-library/svelte": "^3.1.1",
+		"@types/jest": "^27.5.0",
 		"@typescript-eslint/eslint-plugin": "^5.10.1",
 		"@typescript-eslint/parser": "^5.10.1",
 		"eslint": "^7.32.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-svelte3": "^3.2.1",
+		"jest": "^28.1.0",
 		"prettier": "^2.5.1",
 		"prettier-plugin-svelte": "^2.5.0",
 		"svelte": "^3.47.0",
 		"svelte-check": "^2.2.6",
+		"svelte-jester": "^2.3.2",
 		"svelte-preprocess": "^4.10.1",
 		"svelte2tsx": "^0.5.8",
+		"ts-jest": "^28.0.2",
 		"tslib": "^2.3.1",
 		"typescript": "~4.6.2"
 	},
