--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
 		"package": "svelte-kit package",
 		"preview": "svelte-kit preview",
 		"prepare": "svelte-kit sync",
+		"storybook": "start-storybook -p 4000",
+		"build-storybook": "build-storybook",
 		"test": "playwright test",
 		"check": "svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
@@ -24,13 +26,21 @@
 		"svelte": "^3.47.0"
 	},
 	"devDependencies": {
+		"@babel/core": "^7.16.7",
 		"@playwright/test": "^1.20.0",
+		"@storybook/addon-actions": "^6.4.19",
+		"@storybook/addon-essentials": "^6.4.19",
+		"@storybook/addon-links": "^6.4.19",
+		"@storybook/addon-svelte-csf": "^1.1.0",
+		"@storybook/svelte": "^6.4.19",
 		"@sveltejs/adapter-auto": "^1.0.0-next.34",
 		"@sveltejs/kit": "next",
 		"@testing-library/svelte": "^3.1.1",
 		"@types/jest": "^27.5.0",
 		"@typescript-eslint/eslint-plugin": "^5.10.1",
 		"@typescript-eslint/parser": "^5.10.1",
+		"autoprefixer": "^10.4.2",
+		"babel-loader": "^8.2.3",
 		"eslint": "^7.32.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-svelte3": "^3.2.1",
@@ -40,6 +50,7 @@
 		"svelte": "^3.47.0",
 		"svelte-check": "^2.2.6",
 		"svelte-jester": "^2.3.2",
+		"svelte-loader": "^3.1.2",
 		"svelte-preprocess": "^4.10.1",
 		"svelte2tsx": "^0.5.8",
 		"ts-jest": "^28.0.2",
