feat: add hygen for easy setup

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"prepare": "svelte-kit sync",
 		"storybook": "start-storybook -p 4000",
 		"build-storybook": "build-storybook",
+		"create:component": "hygen components create",
 		"test": "playwright test",
 		"check": "svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
@@ -44,6 +45,7 @@
 		"eslint": "^7.32.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-svelte3": "^3.2.1",
+		"hygen": "^6.2.0",
 		"jest": "^28.1.0",
 		"prettier": "^2.5.1",
 		"prettier-plugin-svelte": "^2.5.0",
