--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
 	"type": "module",
 	"main": "./index.js",
 	"scripts": {
-		"dev": "svelte-kit dev",
-		"build": "svelte-kit build",
+		"dev": "vite dev",
+		"build": "svelte-kit sync && svelte-package",
 		"package": "svelte-kit package",
 		"preview": "svelte-kit preview",
 		"prepare": "svelte-kit sync",
@@ -14,18 +14,18 @@
 		"create:component": "hygen components create",
 		"create:story": "hygen components story",
 		"test": "playwright test",
-		"check": "svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
-		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
+		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+		"lint": "prettier --check . && eslint .",
+		"format": "prettier --write ."
 	},
 	"dependencies": {
 		"@babel/core": "^7.17.9",
-		"@chakra-ui/styled-system": "^1.19.0",
-		"@emotion/css": "^11.9.0"
+		"@chakra-ui/styled-system": "^2.3.1",
+		"@emotion/css": "^11.10.0"
 	},
 	"peerDependencies": {
-		"svelte": "^3.47.0"
+		"svelte": "^3.50.0"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.16.7",
@@ -35,8 +35,9 @@
 		"@storybook/addon-links": "^6.4.19",
 		"@storybook/addon-svelte-csf": "^1.1.0",
 		"@storybook/svelte": "^6.4.19",
-		"@sveltejs/adapter-auto": "^1.0.0-next.34",
+		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/kit": "next",
+		"@sveltejs/package": "next",
 		"@testing-library/svelte": "^3.1.1",
 		"@types/jest": "^27.5.0",
 		"@typescript-eslint/eslint-plugin": "^5.10.1",
@@ -50,15 +51,16 @@
 		"jest": "^28.1.0",
 		"prettier": "^2.5.1",
 		"prettier-plugin-svelte": "^2.5.0",
-		"svelte": "^3.47.0",
-		"svelte-check": "^2.2.6",
+		"svelte": "^3.50.0",
+		"svelte-check": "^2.9.0",
 		"svelte-jester": "^2.3.2",
 		"svelte-loader": "^3.1.2",
 		"svelte-preprocess": "^4.10.1",
 		"svelte2tsx": "^0.5.8",
 		"ts-jest": "^28.0.2",
 		"tslib": "^2.3.1",
-		"typescript": "~4.6.2"
+		"typescript": "^4.7.4",
+		"vite": "^3.1.0"
 	},
 	"optionalDependencies": {
 		"svelte-icons": "^2.1.0"
