fix: storybook setup + migrations

--- a/package.json
+++ b/package.json
@@ -8,16 +8,15 @@
 		"build": "svelte-kit sync && svelte-package",
 		"package": "svelte-kit package",
 		"preview": "svelte-kit preview",
-		"prepare": "svelte-kit sync",
-		"storybook": "start-storybook -p 4000",
-		"build-storybook": "build-storybook",
 		"create:component": "hygen components create",
 		"create:story": "hygen components story",
 		"test": "playwright test",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --check . && eslint .",
-		"format": "prettier --write ."
+		"format": "prettier --write .",
+		"storybook": "start-storybook -p 6006",
+		"build-storybook": "build-storybook"
 	},
 	"dependencies": {
 		"@babel/core": "^7.17.9",
@@ -30,11 +29,13 @@
 	"devDependencies": {
 		"@babel/core": "^7.16.7",
 		"@playwright/test": "^1.20.0",
-		"@storybook/addon-actions": "^6.4.19",
-		"@storybook/addon-essentials": "^6.4.19",
-		"@storybook/addon-links": "^6.4.19",
-		"@storybook/addon-svelte-csf": "^1.1.0",
-		"@storybook/svelte": "^6.4.19",
+		"@storybook/addon-actions": "^6.5.12",
+		"@storybook/addon-essentials": "^6.5.12",
+		"@storybook/addon-interactions": "^6.5.12",
+		"@storybook/addon-links": "^6.5.12",
+		"@storybook/builder-vite": "^0.2.2",
+		"@storybook/svelte": "^6.5.12",
+		"@storybook/testing-library": "^0.0.13",
 		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/kit": "next",
 		"@sveltejs/package": "next",
@@ -46,15 +47,17 @@
 		"babel-loader": "^8.2.3",
 		"eslint": "^7.32.0",
 		"eslint-config-prettier": "^8.3.0",
+		"eslint-plugin-storybook": "^0.6.4",
 		"eslint-plugin-svelte3": "^3.2.1",
+		"html-webpack-plugin": "^5.5.0",
 		"hygen": "^6.2.0",
 		"jest": "^28.1.0",
 		"prettier": "^2.5.1",
 		"prettier-plugin-svelte": "^2.5.0",
-		"svelte": "^3.50.0",
+		"svelte": "^3.50.1",
 		"svelte-check": "^2.9.0",
 		"svelte-jester": "^2.3.2",
-		"svelte-loader": "^3.1.2",
+		"svelte-loader": "^3.1.3",
 		"svelte-preprocess": "^4.10.1",
 		"svelte2tsx": "^0.5.8",
 		"ts-jest": "^28.0.2",
