--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
 		"@storybook/svelte": "^6.5.12",
 		"@storybook/testing-library": "^0.0.13",
 		"@sveltejs/adapter-auto": "next",
-		"@sveltejs/kit": "next",
+		"@sveltejs/kit": "^1.0.1",
 		"@sveltejs/package": "next",
 		"@testing-library/svelte": "^3.1.1",
 		"@types/jest": "^27.5.0",
