--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
 		"@storybook/svelte": "^6.5.12",
 		"@storybook/testing-library": "^0.0.13",
 		"@sveltejs/adapter-auto": "next",
-		"@sveltejs/kit": "next",
+		"@sveltejs/kit": "^1.0.1",
 		"@sveltejs/package": "next",
 		"@testing-library/svelte": "^3.1.1",
 		"@types/jest": "^27.5.0",
@@ -54,15 +54,15 @@
 		"prettier": "^2.5.1",
 		"prettier-plugin-svelte": "^2.5.0",
 		"svelte": "^3.50.1",
-		"svelte-check": "^2.9.0",
+		"svelte-check": "^3.0.1",
 		"svelte-jester": "^2.3.2",
 		"svelte-loader": "^3.1.3",
-		"svelte-preprocess": "^4.10.1",
-		"svelte2tsx": "^0.5.8",
-		"ts-jest": "^28.0.2",
-		"tslib": "^2.3.1",
+		"svelte-preprocess": "^5.0.0",
+		"svelte2tsx": "^0.6.0",
+		"ts-jest": "^29.0.3",
+		"tslib": "^2.4.1",
 		"typescript": "^4.7.4",
-		"vite": "^3.1.0"
+		"vite": "^4.0.3"
 	},
 	"optionalDependencies": {
 		"svelte-icons": "^2.1.0"
