--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"build": "svelte-kit sync && svelte-package",
 		"package": "svelte-kit package",
 		"preview": "svelte-kit preview",
+		"create:story": "hygen create storybook",
 		"create:component": "hygen create component",
 		"test": "playwright test",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
