--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"build": "svelte-kit sync && vite build",
 		"package": "svelte-kit sync && svelte-kit package",
 		"preview": "svelte-kit preview",
-		"create:story": "hygen create storybook",
+		"create:story": "hygen create story",
 		"create:component": "hygen create component",
 		"test": "playwright test",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
