--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --check . && eslint .",
 		"format": "prettier --write .",
-		"story:dev": "histoire dev",
+		"story:dev": "svelte-kit sync && histoire dev",
 		"story:build": "histoire build",
 		"story:preview": "histoire preview"
 	},
