--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,10 +2,10 @@
 	"extends": "./.svelte-kit/tsconfig.json",
 	"compilerOptions": {
 		"paths": {
-			"$lib": ["src/lib"],
-			"$lib/*": ["src/lib/*"],
-			"$docs": ["src/docs"],
-			"$docs/*": ["src/docs/*"]
+			"$lib": ["./src/lib"],
+			"$lib/*": ["./src/lib/*"],
+			"$docs": ["./src/docs"],
+			"$docs/*": ["./src/docs/*"]
 		}
 	}
 }
