fix: remove tests

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,8 +11,7 @@ jobs:
         with:
           node-version: 16
       - run: npm install
-      - run: npm test
-      - run: npm package
+      - run: npm run package
       - uses: JS-DevTools/npm-publish@v1
         with:
           token: ${{ secrets.NPM_TOKEN }}
