--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"scripts": {
 		"dev": "vite dev",
 		"build": "svelte-kit sync && vite build",
-		"package": "svelte-kit sync && svelte-kit package",
+		"package": "svelte-kit sync && svelte-package",
 		"preview": "vite preview",
 		"create:story": "hygen create story",
 		"create:component": "hygen create component",
