--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
 	"version": "0.0.6",
 	"type": "module",
 	"main": "./index.js",
+	"homepage": "https://github.com/elcharitas/chakra-ui-svelte",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/elcharitas/chakra-ui-svelte"
+	},
 	"scripts": {
 		"dev": "vite dev",
 		"build": "svelte-kit sync && vite build",
