--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"version": "0.2.0",
 	"type": "module",
 	"main": "./index.js",
+	"types": "./index.d.ts",
 	"homepage": "https://github.com/elcharitas/chakra-ui-svelte",
 	"repository": {
 		"type": "git",
@@ -25,7 +26,8 @@
 	"dependencies": {
 		"@babel/core": "^7.17.9",
 		"@chakra-ui/styled-system": "^2.3.1",
-		"@emotion/css": "^11.10.0"
+		"@emotion/css": "^11.10.0",
+		"lunr": "^2.3.9"
 	},
 	"peerDependencies": {
 		"svelte": "^3.50.0"
@@ -66,6 +68,9 @@
 		"vite": "^4.0.3"
 	},
 	"optionalDependencies": {
-		"svelte-icons": "^2.1.0"
+		"highlightjs": "^9.16.2",
+		"markdown-it-highlightjs": "^4.0.1",
+		"svelte-icons": "^2.1.0",
+		"vite-plugin-svelte-md": "^0.1.7"
 	}
 }
