--- a/package.json
+++ b/package.json
@@ -25,17 +25,18 @@
 	},
 	"dependencies": {
 		"@babel/core": "^7.17.9",
-		"@chakra-ui/styled-system": "^2.3.1",
-		"@emotion/css": "^11.10.0",
-		"lunr": "^2.3.9"
+		"@chakra-ui/styled-system": "^2.3.1"
 	},
 	"peerDependencies": {
-		"svelte": "^3.50.0"
+		"@emotion/css": "^11.10.5",
+		"svelte": "^3.50.0",
+		"vite-plugin-css-injected-by-js": "^3.1.0"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.16.7",
 		"@commitlint/cli": "^17.4.4",
 		"@commitlint/config-conventional": "^17.4.4",
+		"@emotion/css": "^11.10.5",
 		"@playwright/test": "^1.20.0",
 		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/kit": "^1.8.0",
@@ -65,10 +66,12 @@
 		"ts-jest": "^29.0.3",
 		"tslib": "^2.4.1",
 		"typescript": "^4.7.4",
-		"vite": "^4.0.3"
+		"vite": "^4.0.3",
+		"vite-plugin-css-injected-by-js": "^3.1.0"
 	},
 	"optionalDependencies": {
-		"highlightjs": "^9.16.2",
+		"highlight.js": "^11.7.0",
+		"lunr": "^2.3.9",
 		"markdown-it-highlightjs": "^4.0.1",
 		"svelte-icons": "^2.1.0",
 		"vite-plugin-svelte-md": "^0.1.7"
