chore: update eslint dependencies

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
 		"test": "playwright test",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "prettier --check . && eslint .",
+		"lint": "eslint . --ext .svelte,.ts",
 		"format": "prettier --write .",
 		"prepare": "husky install"
 	},
@@ -48,9 +48,10 @@
 		"autoprefixer": "^10.4.2",
 		"babel-loader": "^8.2.3",
 		"commitizen": "^4.3.0",
-		"eslint": "^7.32.0",
+		"eslint": "^8.35.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-svelte3": "^3.2.1",
+		"eslint-plugin-unicorn": "^46.0.0",
 		"html-webpack-plugin": "^5.5.0",
 		"husky": "^8.0.0",
 		"hygen": "^6.2.0",
