--- a/.github/workflows/version-bump.yml
+++ b/.github/workflows/version-bump.yml
@@ -19,7 +19,7 @@ jobs:
         with:
             node-version: 16
       - run: npm i -g husky pnpm
-      - run: pnpm install
+      - run: pnpm install --no-optional
       # - run: pnpm test
   tag-and-bump:
     if: "!startsWith(github.event.head_commit.message, 'bump:')"
@@ -36,6 +36,6 @@ jobs:
         name: Bump package
         uses: commitizen-tools/commitizen-action@master
         with:
-          github_token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
       - name: Print Version
         run: echo "Bumped to version ${{ steps.cz.outputs.version }}"
