--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,9 +3,7 @@
 	"compilerOptions": {
 		"paths": {
 			"$lib": ["./src/lib"],
-			"$lib/*": ["./src/lib/*"],
-			"$docs": ["./src/docs"],
-			"$docs/*": ["./src/docs/*"]
+			"$lib/*": ["./src/lib/*"]
 		}
 	}
 }
