--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"package": "svelte-kit sync && svelte-package",
 		"preview": "vite preview",
 		"create:component": "hygen create component",
+		"create:typings": "hygen create typings",
 		"test": "playwright test",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
