fix: minor cleanups and ci improvements

--- a/.github/workflows/commitlint.yml
+++ b/.github/workflows/commitlint.yml
@@ -16,7 +16,7 @@ jobs:
         id: lint-commits
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          regex: '^(feat|chore|fix|refactor|docs)(\((ui|api|ops|style)\))*: .+' # e.g.) "feat(api): Add /users/get"
+          regex: '^(feat|chore|fix|refactor|docs)(\((ui|api|ops|style)\))*(!*): .+' # e.g.) "feat(api): Add /users/get"
           format: markdown
 
       - name: Post warning comment
