--- a/.github/workflows/prlint.yml
+++ b/.github/workflows/prlint.yml
@@ -6,6 +6,10 @@ on:
       - edited
       - synchronize
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.head_ref }}
+  cancel-in-progress: true
+
 jobs:
   main:
     name: Validate PR title
