--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -12,7 +12,8 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  publish:
+  run-checks:
+    name: Run Svelte-Check & Lint
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
