--- a/.github/workflows/commitlint.yml
+++ b/.github/workflows/commitlint.yml
@@ -12,6 +12,7 @@ concurrency:
 
 jobs:
   lint_commits:
+    name: Lint Commit Messages
     runs-on: ubuntu-latest
     steps:
       - name: Lint commits
