chore(ops): Cancel concurrent action runs (#68)
* chore(ops): cancel concurrent action runs

* chore: rename workflow jobs

--- a/.github/workflows/commitlint.yml
+++ b/.github/workflows/commitlint.yml
@@ -6,8 +6,13 @@ on:
       - edited
       - synchronize
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.head_ref }}
+  cancel-in-progress: true
+
 jobs:
   lint_commits:
+    name: Lint Commit Messages
     runs-on: ubuntu-latest
     steps:
       - name: Lint commits
