--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -1,13 +1,19 @@
 name: Run Svelte & Types Check
 
 on:
+  workflow_dispatch: # on button click
   pull_request_target:
     types:
       - edited
       - synchronize
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.head_ref }}
+  cancel-in-progress: true
+
 jobs:
-  publish:
+  run-checks:
+    name: Run Svelte-Check & Lint
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
