--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -4,6 +4,7 @@ on:
   workflow_dispatch: # on button click
   pull_request_target:
     types:
+      - opened
       - edited
       - synchronize
 
