--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -14,6 +14,7 @@ concurrency:
 
 jobs:
   run-checks:
+    if: '! github.event.pull_request.draft'
     name: Run Svelte-Check & Lint
     runs-on: ubuntu-latest
     steps:
