chore: minor improvements to check

--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -14,7 +14,7 @@ concurrency:
 
 jobs:
   run-checks:
-    if: '! github.event.pull_request.draft'
+    if: github.event.pull_request.draft == false
     name: Run Svelte-Check & Lint
     runs-on: ubuntu-latest
     steps:
