--- a/.github/workflows/commitlint.yml
+++ b/.github/workflows/commitlint.yml
@@ -13,7 +13,7 @@ concurrency:
 
 jobs:
   lint_commits:
-    if: '! github.event.pull_request.draft'
+    if: github.event.pull_request.draft == false
     name: Lint Commit Messages
     runs-on: ubuntu-latest
     steps:
