--- a/.github/workflows/prlint.yml
+++ b/.github/workflows/prlint.yml
@@ -3,6 +3,7 @@ name: Lint PR Title
 on:
   pull_request_target:
     types:
+      - opened
       - edited
       - synchronize
 
@@ -12,6 +13,7 @@ concurrency:
 
 jobs:
   main:
+    if: github.event.pull_request.draft == false
     name: Validate PR title
     runs-on: ubuntu-latest
     steps:
